css/style.css
* {
    font-family: helvetica;
}

/* Error notification */
.notification {
    position: absolute;
    top: 0;
    right: 0;
    z-index: 10;
    background: #41e441;
    padding: 10px 20px;
}

body, html {
    padding: 0;
    margin: 0;
    font: 14px sans-serif;
}

/* Increase display flex cross compatibility */
.d-flex {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
}

/*Navbar */
#mainNav {
    background-color: #0250c5!important;
    font-family: Verdana, Geneva, Tahoma, sans-serif;
}
.bgcolour-primary {
    background-color: #00388c !important
}
.color-primary {
    color: #0250c5!important;
}

#mainNav a {
    font-size: 26px;
    font-weight: bold;
    font-style: italic;
    position: relative;
}

.loginButton {
    font-size: 16px!important;
    position: relative;
}

.loginButton::before {
    content: "Or sign up";
    position: absolute;
    color: white;
    top: 40px;
    right: -15px;
    font-size: 12px;
    width: 100px;
    display: block;
}
.loginButton:hover::before {
    text-decoration: underline!important;
}


.navUsername {
    font-size:0.6em;
    color:white;
    display: inline-block;
    margin: 0;
    margin-right: 10px;
}
.profilePic {
    width:  50px;
    height: 50px;
    border-radius: 50%;
    display: inline-block;
    object-fit: cover;
    background-color: lightgrey;
}

/* HOME PAGE */
#search-container h4 {
    font-size: 26px;
    font-weight: bold;
    text-align: center;
}
.search-box {
    text-align: center;
}
.search-box input {
    width: 250px;
    height: 50px;
    border-radius: 30px;
    background-color: white;
    border: 2px solid black;
}

#search-container h1 {
    font-family: Arial, Helvetica, sans-serif;
}
/*Banner*/
.banner {
    font-size: 2.5em;
    font-weight: bold;
    font-family: Arial, Helvetica, sans-serif;
}

/* Top Functions */
#topFunctions .btn:hover {
    background-color: #0250c5!important;
}
#topFunctions .btn {
    background-color: #0250c5!important;
    align-self: flex-end;
    max-height: 33px;
}

/* Top Posts */
#topPosts .posts h2 {
    font-size: 16px;
    font-weight: bold;
}

#topPosts .posts {
    border-color: none;
    background-color: rgb(161, 214, 235, 0.2);
}

#topPosts .card-body {
    padding: 1%!important;
}

/* Create Post */
#createPost {
    text-align: center;
}
#createPostButton {
    font-size: 16px!important;
}

#createPostForm {
    margin: 0 auto;
    text-align: left;
}

/* Post Form Modal */
.modal-dialog {
    max-width: 600px!important;
}

#posts {
    color: black!important;
    text-decoration: none!important;
    position: absolute;
    width: 100%;
    height: 100%;
    left: 0;
    top: 0;
    z-index: 1;
}

/*Post card info username*/
.user-link { 
    position: relative;
    z-index: 2;
}


.posts a {
    cursor: pointer;
    color: black!important;
    text-decoration: none!important;
}

.continue {
    display: block;
    text-align: center;
    color: white !important;
    margin: 0;
    padding-bottom: 3px;
    font-size: 1.4em;
    background: #0250c5b0;
    text-decoration: none!important;
}

/* Discuss.php single page post */
.post-container {
    overflow: hidden;
}

#post {
    margin-top: 100px;
}

.posts {
    overflow: hidden;
    border-color: none;
    font-family: helvetica;
    background-color: rgb(161, 214, 235, 0.2)!important;
}

.post-username {
    font-size: 1.2em;
}

.post-time { 
    font-size: 0.9em;
}

#post .card-text {
    font-size: 1.2em;
    font-family: helvetica;
}

#thread .posts h2, #post .posts h2 {
    font-size: 16px;
    font-weight: bold;
}

#thread .posts {
    font-size:1.2em;
}

.post-invalid {
    font-size: 90%!important;
}

.hide-post {
    position: absolute;
    right: 0;
    top: 0;
    width: 100%;
    height: 20px;
    background: none;
    border: none;
    text-align: right;
    padding-right: 5px;
}

#replyForm {
    height: 0;
    display:none;
    
    transition: height 2s ease-in;
}

.replyButton i {
    -webkit-text-stroke: 1px black;
    color: white;
}

#closeReply {
        background: none;
        color: black;
        border: none;
        padding: 0;
        font: inherit;
        font-size: 2em;
        cursor: pointer;
        outline: inherit;
        margin-left: auto;
}

/* Login Page */
.wrapper{ 
    width: 360px;
    padding: 20px;
    border-radius: 3px;
    background: #fff;
    box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
}
.background {
    width: 100%;
    min-height: 100vh;
    display: -webkit-box;
    display: -webkit-flex;
    display: -moz-box;
    display: -ms-flexbox;
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
    align-items: center;
    padding: 15px;
    background: #0250c5;
    background: -webkit-linear-gradient(bottom, #0250c5, #d43f8d);
    background: -o-linear-gradient(bottom, #0250c5, #d43f8d);
    background: -moz-linear-gradient(bottom, #0250c5, #d43f8d);
    background: linear-gradient(bottom, #0250c5, #d43f8d);
    position: relative;
    z-index: 1;
}
.background::before {
    content: "";
    display: block;
    position: absolute;
    z-index: -1;
    width: 100%;
    height: 100%;
    top: 0;
    left: 0;
    background-image: url('./images/login-background.png');
    background-repeat: no-repeat;
    background-size: cover;
    background-position: center;
}

/* Hide branding on text editor */
.tox-statusbar__branding {
    display: none;
}

